<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.AdvanceFilterFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/sort_by"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/sort_by_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/sort_by">

        <RadioButton
            android:id="@+id/relevance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/relevance" />

        <RadioButton
            android:id="@+id/latest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newest" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/color_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by_radio_group" />

    <RadioGroup
        android:id="@+id/color_by_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/color_by">

        <RadioButton
            android:id="@+id/any_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/any_color" />

        <RadioButton
            android:id="@+id/black_and_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/black_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tones_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tones"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/color_by"
            app:layout_constraintTop_toBottomOf="@id/black_and_white" />

        <RelativeLayout
            android:id="@+id/tonesLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioGroup
                android:id="@+id/tones_by_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/red"
                    style="@style/tones_radio_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_background_radio_red" />


                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/green"
                    style="@style/tones_radio_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/red"
                    android:layout_toRightOf="@id/red"
                    android:background="@drawable/custom_background_radio_green" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/orange"
                    style="@style/tones_radio_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/blue"
                    android:layout_toRightOf="@id/blue"
                    android:background="@drawable/custom_background_radio_orange" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/purple"
                    style="@style/tones_radio_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/green"
                    android:layout_toRightOf="@id/green"
                    android:background="@drawable/custom_background_radio_purple" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/yellow"
                    style="@style/tones_radio_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/green"
                    android:layout_toRightOf="@id/green"
                    android:background="@drawable/custom_background_radio_yellow" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/blue"
                    style="@style/tones_radio_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/green"
                    android:layout_toRightOf="@id/green"
                    android:background="@drawable/custom_background_radio_blue" />
            </RadioGroup>
        </RelativeLayout>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orientation_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/orientation"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/color_by_radio_group" />

    <RadioGroup
        android:id="@+id/orientation_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/orientation_by">

        <RadioButton
            android:id="@+id/any"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/any_orientation" />

        <RadioButton
            android:id="@+id/portrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orientation_portrait" />

        <RadioButton
            android:id="@+id/landscape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orientation_landscape" />

        <RadioButton
            android:id="@+id/squarish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orientation_square" />
    </RadioGroup>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu_colorNormal="@color/red"
        app:menu_colorPressed="#F2AB00"
        app:menu_colorRipple="#D99200"
        app:menu_labels_ellipsize="end"
        app:menu_labels_singleLine="true"
        app:menu_labels_textSize="@dimen/fabbuttons_title">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/search_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_mark"
            app:fab_label="Apply Filter"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/clear_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear_filter"
            app:backgroundTint="#90caf9"
            app:fab_label="Clear Filter"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cancel"
            app:fab_label="Cancel"
            app:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>
</androidx.constraintlayout.widget.ConstraintLayout>